--- a/apps/backend/java-services/pom.xml
+++ b/apps/backend/java-services/pom.xml
@@ -39,9 +39,16 @@
         <!-- Testing -->
         <junit.version>5.10.0</junit.version>
         <testcontainers.version>1.19.0</testcontainers.version>
+
+        <!-- API Documentation -->
+        <springdoc.version>2.3.0</springdoc.version>
+        <swagger.version>2.2.17</swagger.version>
     </properties>
 
     <modules>
+        <!-- Shared Libraries -->
+        <module>../../../libs/shared/backend-utils</module>
+
         <!-- Infrastructure Services -->
         <module>infrastructure/config-server</module>
         <module>infrastructure/eureka-server</module>
@@ -72,6 +79,23 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- API Documentation -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
