--- a/package.json
+++ b/package.json
@@ -19,21 +19,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/material": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
-    "@angular/service-worker": "^17.0.0",
-    "@ngrx/store": "^17.0.0",
-    "@ngrx/effects": "^17.0.0",
-    "@ngrx/store-devtools": "^17.0.0",
+    "next": "^14.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
+    "zustand": "^4.4.0",
     "@apollo/client": "^3.8.0",
-    "apollo-angular": "^6.2.0",
+    "@apollo/server": "^4.10.0",
     "graphql": "^16.8.0",
     "express": "^4.18.0",
     "fastify": "^4.24.0",
@@ -56,7 +52,8 @@
   },
   "devDependencies": {
     "@nx/workspace": "17.1.0",
-    "@nx/angular": "17.1.0",
+    "@nx/next": "17.1.0",
+    "@nx/react": "17.1.0",
     "@nx/node": "17.1.0",
     "@nx/jest": "17.1.0",
     "@nx/cypress": "17.1.0",
