feat: Implement analytics engine services for report storage, template management, trend analysis, and validation
- Added StorageService for managing analytics report files with methods for storing, deleting, and retrieving files.
- Introduced TemplateService to handle report templates, including fetching available templates and applying them to report content.
- Developed TrendAnalysisService for analyzing trends in analytics data, including linear regression and seasonality detection.
- Created ValidationService to ensure data quality and accuracy in analytics results, including metric validation and data completeness checks.
- Configured application properties for the analytics engine, including database, Redis, Kafka, and logging settings.

--- a/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
@@ -152,6 +152,11 @@ management:
     tags:
       service: payment-processor
       environment: ${spring.profiles.active}
+  tracing:
+    sampling:
+      probability: 1.0
+    zipkin:
+      endpoint: ${ZIPKIN_URL:http://localhost:9411/api/v2/spans}
   health:
     redis:
       enabled: true
