feat: Enhance service management scripts and add health check functionality
- Updated `stop-infrastructure.sh` to improve service stopping logic and added options for stopping specific services or only infrastructure services.
- Created `check-services.sh` to monitor the health status of all infrastructure and business services, providing detailed health information and management commands.
- Added `INFRASTRUCTURE_STATUS_AND_ROADMAP.md` to document the current status and roadmap for the Modern Reservation System infrastructure.
- Introduced PGP signatures and MD5 checksums for `zipkin.jar` to ensure integrity and security.
- Added PID files for running services to track process IDs for easier management.

--- a/apps/backend/java-services/infrastructure/gateway-service/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/gateway-service/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     config:
       username: config-admin
       password: ${CONFIG_SERVER_PASSWORD:admin123}
+  main:
+    allow-bean-definition-overriding: true
+    web-application-type: reactive
     gateway:
       discovery:
         locator:
