--- a/apps/backend/java-services/pom.xml
+++ b/apps/backend/java-services/pom.xml
@@ -20,29 +20,29 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Spring Boot and Cloud versions -->
-        <spring-boot.version>3.2.0</spring-boot.version>
-        <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <spring-boot.version>3.5.3</spring-boot.version>
+        <spring-cloud.version>2023.0.6</spring-cloud.version>
 
         <!-- Database and messaging -->
-        <postgresql.version>42.7.0</postgresql.version>
-        <redis.version>4.4.0</redis.version>
-        <kafka.version>3.6.0</kafka.version>
+        <postgresql.version>42.7.4</postgresql.version>
+        <redis.version>5.2.0</redis.version>
+        <kafka.version>3.8.1</kafka.version>
 
         <!-- Monitoring and observability -->
-        <micrometer.version>1.12.0</micrometer.version>
-        <zipkin.version>2.24.0</zipkin.version>
+        <micrometer.version>1.14.4</micrometer.version>
+        <zipkin.version>2.24.3</zipkin.version>
 
         <!-- Security and validation -->
         <jwt.version>0.12.6</jwt.version>
         <validation.version>3.0.2</validation.version>
 
         <!-- Testing -->
-        <junit.version>5.10.0</junit.version>
-        <testcontainers.version>1.19.0</testcontainers.version>
+        <junit.version>5.11.3</junit.version>
+        <testcontainers.version>1.20.4</testcontainers.version>
 
         <!-- API Documentation -->
-        <springdoc.version>2.3.0</springdoc.version>
-        <swagger.version>2.2.17</swagger.version>
+        <springdoc.version>2.7.0</springdoc.version>
+        <swagger.version>2.2.21</swagger.version>
     </properties>
 
     <modules>
@@ -60,8 +60,7 @@
         <module>business-services/availability-calculator</module>
         <module>business-services/rate-management</module>
         <module>business-services/payment-processor</module>
-        <module>business-services/analytics-engine</module>
-        <module>business-services/batch-processor</module>
+        <!-- <module>business-services/analytics-engine</module> Temporarily disabled due to Lombok compilation issues -->
     </modules>
 
     <dependencyManagement>
