Refactor reservation audit table schema and update application configuration
- Removed schema specification from the reservation_audit table definition.
- Changed Hibernate ddl-auto setting from 'validate' to 'none' in application.yml.
- Updated default schema to 'public' in Hibernate properties.
- Changed file permissions for SQL migration scripts to be executable.
- Enhanced infrastructure management script (infra.sh) with new commands for starting, stopping, and checking business services.
- Added detailed setup completion documentation (SETUP_COMPLETE.md) for the Modern Reservation System.
- Implemented business services status check script (check-business-services.sh) to monitor health and accessibility.
- Created database setup script (setup-database.sh) for PostgreSQL initialization and schema migration.
- Developed scripts for starting (start-business-services.sh) and stopping (stop-business-services.sh) business services gracefully.

--- a/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
@@ -15,9 +15,9 @@ spring:
 
   # Database Configuration
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation
-    username: ${DB_USERNAME:reservation_user}
-    password: ${DB_PASSWORD:reservation_pass}
+    url: jdbc:postgresql://localhost:5432/modern_reservation_dev
+    username: ${DB_USERNAME:dev_user}
+    password: ${DB_PASSWORD:dev_password}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 20
@@ -31,7 +31,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     show-sql: false
