--- a/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
@@ -6,6 +6,8 @@
 spring:
   application:
     name: payment-processor-service
+  config:
+    import: "optional:configserver:http://localhost:8888/config"
 
   # Profile Configuration
   profiles:
@@ -13,9 +15,9 @@ spring:
 
   # Database Configuration
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation_payments
-    username: ${DB_USERNAME:modern_reservation}
-    password: ${DB_PASSWORD:password}
+    url: jdbc:postgresql://localhost:5432/modern_reservation_dev
+    username: ${DB_USERNAME:dev_user}
+    password: ${DB_PASSWORD:dev_password}
     driver-class-name: org.postgresql.Driver
     hikari:
       connection-timeout: 20000
@@ -28,9 +30,9 @@ spring:
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
       naming:
-        physical-strategy: org.hibernate.boot.model.naming.SnakeCasePhysicalNamingStrategy
+        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     show-sql: false
     properties:
       hibernate:
