--- a/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
@@ -19,12 +19,12 @@ spring:
     password: ${DB_PASSWORD:dev_password}
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     show-sql: false
     properties:
       hibernate:
         format_sql: true
-        default_schema: reservation
+        default_schema: public
 
 # Redis Configuration
   redis:
