feat: Enhance service discovery integration; update application configuration and add Eureka commands to infrastructure scripts

--- a/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
@@ -5,7 +5,9 @@ spring:
   application:
     name: reservation-engine
   config:
-    import: "configserver:http://localhost:8888/config"
+    import:
+      - "configserver:http://localhost:8888/config"
+      - "optional:configserver:http://localhost:8888/config/business-services-common.yml"
   cloud:
     config:
       username: config-admin
