--- a/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
@@ -14,17 +14,19 @@ spring:
       password: ${CONFIG_SERVER_PASSWORD:admin123}
   profiles:
     active: dev
-  # Database Configuration (will be overridden by Config Server)
+  # Database Configuration (using Docker PostgreSQL)
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation_dev
-    username: ${DB_USERNAME:dev_user}
-    password: ${DB_PASSWORD:dev_password}
+    url: jdbc:postgresql://localhost:5432/modern_reservation
+    username: dev_user
+    password: dev_password123
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
         default_schema: public
 
