feat: Update database configurations and enhance setup script for Docker compatibility; add validation feature

--- a/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
   # Database Configuration (using Docker PostgreSQL)
   datasource:
     url: jdbc:postgresql://localhost:5432/modern_reservation
-    username: dev_user
-    password: dev_password123
+    username: postgres
+    password: postgres
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
