--- a/apps/backend/java-services/infrastructure/config-server/src/main/resources/config/application-dev.yml
+++ b/apps/backend/java-services/infrastructure/config-server/src/main/resources/config/application-dev.yml
@@ -1,9 +1,9 @@
 # Development Environment Configuration
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation_dev
-    username: ${DB_USERNAME:dev_user}
-    password: ${DB_PASSWORD:dev_password}
+    url: jdbc:postgresql://localhost:5432/modern_reservation
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
 
 # Redis Configuration for Development
   redis:
