--- a/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
@@ -105,6 +105,7 @@ spring:
 # Server Configuration
 server:
   port: ${SERVER_PORT:8084}
+  address: 127.0.0.1  # Bind only to localhost - not accessible externally
   servlet:
     context-path: /payment-processor
   compression:
@@ -124,9 +125,15 @@ eureka:
     initial-instance-info-replication-interval-seconds: 5
     instance-info-replication-interval-seconds: 5
   instance:
-    prefer-ip-address: true
+    prefer-ip-address: false
+    hostname: localhost
+    ip-address: 127.0.0.1
+    instance-id: ${spring.application.name}:${server.port}
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
+    home-page-url: http://localhost:${server.port}/
+    status-page-url: http://localhost:${server.port}/actuator/info
+    health-check-url: http://localhost:${server.port}/actuator/health
     metadata-map:
       zone: ${EUREKA_ZONE:zone1}
       profile: ${spring.profiles.active}
