--- a/apps/backend/java-services/infrastructure/config-server/src/main/resources/config/application-common.yml
+++ b/apps/backend/java-services/infrastructure/config-server/src/main/resources/config/application-common.yml
@@ -27,7 +27,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-admin:admin123@localhost:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
     healthcheck:
