--- a/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
   # Database Configuration
   datasource:
     url: jdbc:postgresql://localhost:5432/modern_reservation_dev
-    username: ${DB_USERNAME:dev_user}
-    password: ${DB_PASSWORD:dev_password}
+    username: ${DB_USERNAME:reservation_user}
+    password: ${DB_PASSWORD:reservation_pass}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 20
