--- a/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
   # Database Configuration
   datasource:
     url: jdbc:postgresql://localhost:5432/modern_reservation_dev
-    username: ${DB_USERNAME:dev_user}
-    password: ${DB_PASSWORD:dev_password}
+    username: ${DB_USERNAME:reservation_user}
+    password: ${DB_PASSWORD:reservation_pass}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 30
@@ -47,10 +47,8 @@ spring:
         order_inserts: true
         order_updates: true
         cache:
-          use_second_level_cache: true
-          use_query_cache: true
-          region:
-            factory_class: org.hibernate.cache.jcache.JCacheRegionFactory
+          use_second_level_cache: false
+          use_query_cache: false
 
   # Redis Configuration
   data:
