feat: Centralize logging directory structure and enhance Swagger API documentation for Gateway Service

--- a/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
@@ -184,7 +184,7 @@ logging:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level [%X{traceId},%X{spanId}] %logger{36} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%X{traceId},%X{spanId}] %logger{50} - %msg%n"
   file:
-    name: logs/analytics-engine.log
+    name: ../../logs/business-services/analytics-engine.log
     max-size: 100MB
     max-history: 30
 
