--- a/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
@@ -134,6 +134,9 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%X{traceId:-},%X{spanId:-}] [%thread] %-5level [%logger{36}] - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%X{traceId:-},%X{spanId:-}] [%thread] %-5level [%logger{36}] - %msg%n"
+  file:
+    name: ../../logs/business-services/reservation-engine.log
 
 # Application Information
 info:
