--- a/apps/backend/java-services/infrastructure/gateway-service/pom.xml
+++ b/apps/backend/java-services/infrastructure/gateway-service/pom.xml
@@ -79,6 +79,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- SpringDoc OpenAPI for Gateway (WebFlux) -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>${springdoc.version}</version>
+        </dependency>
+
         <!-- Shared Backend Utils -->
         <dependency>
             <groupId>com.modernreservation</groupId>
