feat: Implement code quality improvements including Caffeine cache for memory management, HikariCP configuration for connection pooling, and enhanced HTTP client management

--- a/apps/backend/java-services/business-services/analytics-engine/pom.xml
+++ b/apps/backend/java-services/business-services/analytics-engine/pom.xml
@@ -157,6 +157,28 @@
             <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Caffeine Cache for performance and memory management -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+        <!-- MapStruct for object mapping -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+
+        <!-- Resilience4j for circuit breaker pattern -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
