--- a/apps/backend/java-services/infrastructure/eureka-server/pom.xml
+++ b/apps/backend/java-services/infrastructure/eureka-server/pom.xml
@@ -55,6 +55,12 @@
             <version>2.0.0</version>
         </dependency>
 
+        <!-- Apache HttpClient 5 for Spring Boot HTTP client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
