--- a/apps/backend/java-services/business-services/payment-processor/pom.xml
+++ b/apps/backend/java-services/business-services/payment-processor/pom.xml
@@ -120,6 +120,12 @@
             <version>1.5.5.Final</version>
         </dependency>
 
+        <!-- Apache HttpClient 5 for Spring Boot HTTP client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+        </dependency>
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
