--- a/apps/backend/java-services/business-services/rate-management/pom.xml
+++ b/apps/backend/java-services/business-services/rate-management/pom.xml
@@ -117,6 +117,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
+        <!-- Apache HttpClient 5 for Spring Boot HTTP client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
