--- a/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
@@ -123,3 +123,16 @@ logging:
     name: ../../logs/business-services/rate-management.log
     max-size: 10MB
     max-history: 30
+
+# OpenAPI Documentation
+springdoc:
+  api-docs:
+    path: /api-docs
+    enabled: true
+  swagger-ui:
+    path: /swagger-ui.html
+    config-url: /rate-management/api-docs/swagger-config
+    url: /rate-management/api-docs
+    enabled: true
+    operations-sorter: alpha
+    tags-sorter: alpha
