--- a/apps/backend/java-services/business-services/reservation-engine/pom.xml
+++ b/apps/backend/java-services/business-services/reservation-engine/pom.xml
@@ -108,6 +108,12 @@
         <!-- Shared Backend Utils -->
                 <!-- Internal Dependencies will be added later when shared library is ready -->
 
+        <!-- Apache HttpClient 5 for Spring Boot HTTP client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
